--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
     "lucide-react": "0.513.0",
-    "next": "^15.3.5",
+    "next": "^15.5.7",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
+    "react": "^19.2.1",
     "react-datepicker": "8.4.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "suncalc": "^1.9.0",
@@ -57,13 +57,13 @@
     "@types/react-dom": "^19",
     "@types/suncalc": "^1.8.1",
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.4.35",
     "eslint": "^8",
-    "eslint-config-next": "15.3.3",
+    "eslint-config-next": "^15.5.7",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react-hooks": "^5.2.0",
     "jsdom": "^26.1.0",
+    "postcss": "^8.4.35",
     "rimraf": "^6.0.1",
     "sharp": "^0.33.4",
     "tailwindcss": "^3.4.0",
